src/unit_tests/CustSemantics/fail/inh-not-exists.cl
class Main inherits IO {
    main(): Int {
        1
    };
};

class Fun inherits Test {};